--- a/README
+++ b/README
@@ -1,1 +1,3 @@
+To compile this program, you will need the sqlite3 (libsqlite3-dev) and FUSE (libfuse-dev) development files.
+
 The program must be run in single-thread mode, otherwise the behavior is undefined. This is accomplished with the -s flag. Example: ./tagfs -s TagFS/
