--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-To compile this program, you will need the sqlite3 (libsqlite3-dev) and FUSE (libfuse-dev) development files.
+To compile this program, you will need the sqlite3 (libsqlite3-dev), FUSE (libfuse-dev), and glib (libglib2.0-dev) development files.
 
-The program must be run in single-thread mode, otherwise the behavior is undefined. This is accomplished with the -s flag. Example: ./tagfs -s TagFS/
+If you run into problems with TagFS, try running TagFS in single-thread mode. This may help solve the problem. If not, it will still make it easier to identify the problem in the logs. This is accomplished with the -s flag. Example: ./tagfs -s TagFS/
